Bug 12285 - "DriverVersion" registry backend parsing incorrect in spoolss
Summary: "DriverVersion" registry backend parsing incorrect in spoolss
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.5.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-22 00:26 UTC by Guenther Deschner
Modified: 2016-10-18 07:46 UTC (History)
3 users (show)

See Also:


Attachments
patch from master for v4-5-test (and all other branches) (1.55 KB, patch)
2016-09-22 00:29 UTC, Guenther Deschner
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2016-09-22 00:26:12 UTC
We were incorrectly parsing a "6.1.7600.16385" spoolss printer driver version and end up reporting "6.1.7600.1"
Comment 1 Guenther Deschner 2016-09-22 00:29:59 UTC
Created attachment 12502 [details]
patch from master for v4-5-test (and all other branches)
Comment 2 Andreas Schneider 2016-09-22 05:47:44 UTC
Karolin, please add the patch to the current maintained branches. Thanks!
Comment 3 Karolin Seeger 2016-09-23 09:43:20 UTC
(In reply to Andreas Schneider from comment #2)
Pushed to autobuild-v4-{5,4,3}-test.
Comment 4 Karolin Seeger 2016-10-18 07:46:08 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to all branches.
Closing out bug report.

Thanks!